<resources>
    <string name="app_name">TestGame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_total">In total</string>
    <string name="now">Now</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="start">START</string>
    <string name="go">GO</string>
    <string name="quite">Quite</string>
    <string name="reset">Reset</string>
</resources>