<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".screens.game_fragment.GameFragment">

    <TextView
        android:id="@+id/inTotalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_total"
        android:textSize="20sp"
        android:textColor="@color/green"

        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/inTotalScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="30sp"
        android:textColor="@color/yellow"

        android:layout_marginTop="8dp"

        app:layout_constraintStart_toStartOf="@id/inTotalTitle"
        app:layout_constraintTop_toBottomOf="@id/inTotalTitle"
        />

    <TextView
        android:id="@+id/nowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now"
        android:textSize="20sp"
        android:textColor="@color/green"

        android:layout_marginEnd="24dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/inTotalTitle"
        />

    <TextView
        android:id="@+id/nowScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="30sp"
        android:textColor="@color/yellow"

        android:layout_marginEnd="24dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/inTotalScoreTextView"
        />

    <ImageView
       android:id="@+id/arrowIV"
       android:layout_width="30dp"
       android:layout_height="30dp"
       android:src="@drawable/heart"

       android:layout_marginTop="100dp"

       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       />

    <ImageView
        android:id="@+id/circleImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/fortune_circle"

        android:layout_marginTop="4dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrowIV"
        />

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"

        app:layout_constraintStart_toEndOf="@id/resetButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circleImageView"
        app:layout_constraintBottom_toTopOf="@id/stopButton"
        />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"

        app:layout_constraintStart_toEndOf="@id/quiteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goButton"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/goButton"
        app:layout_constraintBaseline_toBaselineOf="@id/goButton"
        />

    <Button
        android:id="@+id/quiteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quite"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stopButton"
        app:layout_constraintBaseline_toBaselineOf="@id/stopButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>